# agentic-ai-api

./: .gitignore  DEPLOYMENT_CONFIG.md  azure.yaml  initial-azure-setup.sh  requirements-test.txt
.github/workflows/: azure-OIDC-deploy.yml  azure-deploy.yml  azure-test2.yml  terraform-deploy-existing-resources.yml  terraform-deploy.yml  test-app.yml  test-openAI.yml
app/: azure_subscription.py  main.py  pyproject.toml  test.http  test_API.py  test_embedding.py  test_openai.py  test_openai_function.py
app/formfiller/: README.md  __init__.py  api.py  app_integration.py  form_filling_agent.ipynb  formfiller_memory.json  graph.py  llm_client.py
app/formfiller/agents/: __init__.py  analyze_form_agent.py  process_field_agent.py
app/formfiller/prompts/: analyze_form_prompt.py  analyze_form_prompt_ReAct.py  backup_prompt.py  process_field_prompt.py
app/llm/tools/: ai_search_tool.py
app/notebook/: code_text.ipynb  form_filling_agent.ipynb  graph.ipynb  search.ipynb  workflow_human.ipynb
app/nr_tests/: main.py  test_basic.py  test_main.py
app/search_indexer/: web_crawler.py
app/tests/: run.py  test_agentic_ai.py  test_exact_payload.py  test_main.py  test_simple_water_agent.py  test_verification_tool.py  test_water_agent.py
infra/: .terraform.tfstate.lock.info  main.tf  main.tfvars.json  main_backup.tf  main_simplified.tf  outputs.tf  providers.tf  variables.tf
infra/Scripts/: import-existing-resources.sh
infra/modules/backend/: main.tf  outputs.tf  variables.tf
infra/modules/cosmos/: main.tf  outputs.tf  variables.tf
infra/modules/network/: locals.tf  main.tf  outputs.tf  variables.tf
