[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent API built with FastAPI and LangChain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.99.3",
    "httpx>=0.25.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.0",
    "langgraph>=0.2.30",
    "azure-core>=1.30.0",
    "azure-search-documents>=11.5.0,<12.0.0",
    "tavily-python>=0.4.0",
    "langchain-community>=0.3.27",
    "azure-storage-blob>=12.26.0",
    "azure-search-documents>=11.5.3",
    "azure-identity>=1.24.0",
    "beautifulsoup4>=4.13.4",
    "azure-ai-documentintelligence>=1.0.2",
    "langgraph>=0.6.4",
    "structlog>=25.4.0",
    "grandalf",
    "langgraph-checkpoint-redis",
     "redis"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nr_agentic_ai_api"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
packages = ["app"]

line-length = 88
target-version = ['py311']

profile = "black"
line_length = 88
